spacing issues

--- a/src/pages/operator/css/Operator.css
+++ b/src/pages/operator/css/Operator.css
@@ -125,8 +125,9 @@
     row-gap: 10px;
     column-gap: 10px;
     justify-content: center;
-    padding-top: 4px;
-    margin-bottom: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 #operator-body {
